[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wave-buoy"
version = "0.1.0"
description = "Wave buoy project scaffold"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "matplotlib>=3.8",
  "numpy>=1.26",
]

[project.scripts]
wave-buoy-plot-disp = "wave_buoy.plot_displacement:main"
wave-buoy-batch-time-history = "wave_buoy.batch_export_time_history:main"

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
